Cannot overtake lock if ping document is deleted in RS config servers

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.8
    • Affects Version/s: 3.1.6
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 9 (09/18/15)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Example warning in logs:

      could not acquire collection lock for test.user to split chunk [{ : MinKey },{ : MaxKey }) :: caused by :: ping entry for ren-desktop:30000:1439403236:2061743636 not found
      

            Assignee:
            Randolph Tan
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: