SERVER-19897 Cannot overtake lock if ping document is deleted in RS config servers